# pypiPackageApp

./: .gitignore  manage.py  pyproject.toml  readme.md
pypiPackageApp/: asgi.py  settings.py  urls.py  wsgi.py
templates/: packages-list.html
