[tool.poetry]
name = "pypipackageapp"
version = "0.1.0"
description = ""
authors = ["Maciej Ciupa <maciekc1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
pypi-rss = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
