[tool.poetry]
name = "pypipackageapp"
version = "0.1.0"
description = ""
authors = ["Maciej Ciupa <maciekc1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
pypi-rss = "^2020.12.3"
APScheduler = "^3.9.1"
elasticsearch = "^8.4.2"
black = "^22.8.0"
parametrized = "^0.1"
parameterized = "^0.8.1"
coverage = "^6.5.0"
django-nose = "^1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
